'add buttons to HTML'

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <button class="btn rock">Rock</button>
+    <button class="btn paper">Paper</button>
+    <button class="btn scissors">scissors</button>
 
     <script src="script.js"></script>
 </body>
