'rewrite my js '

--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    <button class="btn rock">Rock</button>
-    <button class="btn paper">Paper</button>
-    <button class="btn scissors">scissors</button>
-
+    <div class="container">
+    <div>
+    <button class="btn rock" value="rock">Rock</button>
+    <button class="btn paper" value="paper">Paper</button>
+    <button class="btn scissors" value="scissors">scissors</button>
+    </div>
+    <div id="your-selection">your selection :</div>
+    <div id="bot-selection">Bot selection :</div>
+    <div id="points">points :</div>
+    </div>   
     <script src="script.js"></script>
 </body>
 </html>
