'write the psudocode for game'

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <div id="your-selection">your selection :</div>
     <div id="bot-selection">Bot selection :</div>
-    <div id="points">points :</div>
+    <div id="scores">scores :</div>
     </div>   
     <script src="script.js"></script>
 </body>
