--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
     <button class="btn paper" value="paper">Paper</button>
     <button class="btn scissors" value="scissors">scissors</button>
     </div>
-    <div id="your-selection">your selection :</div>
-    <div id="bot-selection">Bot selection :</div>
-    <div id="scores">scores :</div>
+    <div>your selection:<span id="your-selection"></span></div>
+    <div>Bot selection:<span id="bot-selection"></span></div> 
+    <div>bot scores:<span id="bot-scores" ></span></div>
+    <div>player scores:<span id="player-scores" ></span></div>
+    <div id="message"></div>
+    
     </div>   
     <script src="script.js"></script>
 </body>
